# wordspreader

./: .gitignore  LICENSE.txt  README.md  examples.yaml  pyproject.toml
tests/: __init__.py  conftest.py  test_main.py  test_persistence.py
wordspreader/: __about__.py  __init__.py  board.py  board_list.py  components.py  ddl.py  examples.yaml  item.py  main.py  memory_store.py  persistence.py  sidebar.py
wordspreader/components/: __init__.py  worddisplay.py  wordentry.py
