[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordspreader"
dynamic = ["version"]
description = 'Spread the word'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "mriswithe", email = "1725647+mriswithe@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "appdirs",
  "flet",
  "sqlalchemy",
  "sqlalchemy-utils",
]

[project.urls]
Documentation = "https://github.com/unknown/wordspreader#readme"
Issues = "https://github.com/unknown/wordspreader/issues"
Source = "https://github.com/unknown/wordspreader"

[tool.hatch.version]
path = "wordspreader/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "watchdog",
  "hypothesis",
  "pyyaml",
  "rich",
  "psycopg2",
  "PyInstaller"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
hotreload = ["flet.exe run wordspreader/main.py -p 8080 --hidden --web --recursive --directory"]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:wordspreader tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
silent = [
  "black {args:.}",
  "ruff --fix {args:.}",
]
fmt = [
  "silent",
  "style",
]
all = [
  "style",
  "typing",
]
[tool.hatch.envs.build]
extra-dependencies = ['PyInstaller']
dev-mode=false
scripts.build = 'flet pack -vv -n wordspreader wordspreader/main.py'
[tool.black]
target-version = ["py311"]
line-length = 100
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
  # Don't touch assigned unused variables
  "F841"
]

[tool.ruff.isort]
known-first-party = ["wordspreader"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["wordspreader", "tests"]
branch = true
parallel = true
omit = [
  "wordspreader/__about__.py",
]

[tool.coverage.paths]
wordspreader = ["wordspreader", "*/wordspreader/wordspreader"]
tests = ["tests", "*/wordspreader/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
